--- a/task_3.5/package.json
+++ b/task_3.5/package.json
@@ -11,7 +11,8 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
-    "pinia": "^2.3.1",
+    "pinia": "^3.0.0",
+    "pinia-plugin-persistedstate": "^4.2.0",
     "vue": "^3.5.13"
   },
   "devDependencies": {
